Fix bug with margins on aligned images

--- a/web/themes/custom/union_marketing/scss/components/_sections.scss
+++ b/web/themes/custom/union_marketing/scss/components/_sections.scss
@@ -12,7 +12,7 @@
 }
 
 .paragraph--type--image,
-.paragraph--type--rich-text figure.cu-media,
+figure.cu-media,
 .paragraph--type--video {
   margin: var(--cu-component-margin-bottom, var(--cu-vr2)) 0;
 
